--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
 body{
     overflow: hidden;
 }
+footer{
+    z-index: 1;
+    color: #ff2a2a;
+
+}
 section{
     display: flex;
     justify-content: center;
@@ -42,7 +47,7 @@ section .box .circle{
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    z-index: 1;
+    z-index: 2;
 }
 section .box .circle::before{
     content: '';
@@ -56,7 +61,7 @@ section .box .circle::before{
 }
 section .box .circle h2{
     position: absolute;
-    z-index: 2;
+    z-index: 3;
     font-size: 4em;
     color: #ff2a2a;
     text-align: center;
